# opengl-testing

./: CMakeLists.txt  frag.glsl  vert.glsl
src/: global.hpp  main.cpp  shader.cpp  shader.hpp  test.hpp  verts.hpp
